refactorizacion supermercado